<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/Search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_startchat"
        android:icon="@drawable/ic_chat_black_24dp"
        android:orderInCategory="100"
        android:title="@string/startchat"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_joinfriend"
        android:icon="@drawable/ic_person_add_black_24dp"
        android:orderInCategory="100"
        android:title="@string/addfridend"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_creategroup"
        android:icon="@drawable/ic_group_add_black_24dp"
        android:orderInCategory="100"
        android:title="@string/creatgroup"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_qrcode"
        android:icon="@drawable/ic_center_focus_weak_black_24dp"
        android:orderInCategory="100"
        android:title="@string/qrcode"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_forhelp"
        android:icon="@drawable/ic_help_outline_black_24dp"
        android:orderInCategory="100"
        android:title="@string/forhelp"
        app:showAsAction="never" />
</menu>
